@@ -6,6 +6,7 @@ SPoG
 - Fixed crash when resetting preferences after startup failure.
 - Fixed crash on next-leak-spot with build-monitoring enabled.
 - Fixed doom3/quake4 blended-decal rendering when toggling lighting mode.
+- Fixed fit-texture with rotated texture transforms.
 
 20/03/2006
 SPoG
